style: Replace `trim().isEmpty()` with `isBlank()` for cleaner validation condition